--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:theme="@style/Theme.Habitss"
         tools:targetApi="31">
         <activity
+            android:name=".AboutActivity"
+            android:exported="false" />
+        <activity
             android:name=".SignupActivity"
             android:exported="true">
             <intent-filter>
@@ -36,6 +39,18 @@
         <activity
             android:name=".EditProfileActivity"
             android:exported="false" />
+        <activity
+            android:name="com.example.habitss.activity.MainActivity"
+            android:exported="false" />
+        <receiver
+            android:name=".broadcastReceiver.AlarmBroadcastReceiver"
+            android:exported="false"> <!-- Установите значение в true или false в зависимости от ваших потребностей -->
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
+
 
     </application>
 
